--- a/package.json
+++ b/package.json
@@ -3,21 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullcalendar/daygrid": "^5.6.0",
     "@fullcalendar/react": "^5.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
     "chart.js": "^3.2.0",
+    "classnames": "^2.3.1",
     "dropzone": "^5.9.2",
     "firebase": "^8.3.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-bootstrap-icons": "^1.4.0",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-bootstrap-table": "^4.3.1",
     "react-bootstrap-table-2": "^2.10.7",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
