--- a/package.json
+++ b/package.json
@@ -13,18 +13,24 @@
     "classnames": "^2.3.1",
     "dropzone": "^5.9.2",
     "firebase": "^8.3.2",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-bootstrap-icons": "^1.4.0",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-bootstrap-table": "^4.3.1",
     "react-bootstrap-table-2": "^2.10.7",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-editor": "^1.4.0",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-to-pdf": "^0.0.13",
+    "react-to-print": "^2.12.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
