--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fullcalendar/daygrid": "^5.6.0",
+    "@fullcalendar/interaction": "^5.6.0",
     "@fullcalendar/react": "^5.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -23,6 +24,7 @@
     "react-bootstrap-table-2": "^2.10.7",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-editor": "^1.4.0",
+    "react-chartjs-2": "^3.0.3",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
