--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "bootstrap": "^4.6.0",
     "chart.js": "^3.2.0",
     "classnames": "^2.3.1",
+    "dotenv": "^8.2.0",
     "dropzone": "^5.9.2",
     "firebase": "^8.3.2",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
+    "react-avatar": "^3.10.0",
     "react-bootstrap": "^1.5.2",
     "react-bootstrap-icons": "^1.4.0",
     "react-bootstrap-sweetalert": "^5.2.0",
@@ -28,6 +30,7 @@
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
+    "react-firebase-hooks": "^3.0.4",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
