--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
     "react-firebase-hooks": "^3.0.4",
+    "react-icons": "^4.2.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
