--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap-table-2": "^2.10.7",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-editor": "^1.4.0",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-chartjs-2": "^3.0.3",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.2",
