--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
     "react-to-pdf": "^0.0.13",
     "react-to-print": "^2.12.4",
     "web-vitals": "^1.0.1"
