--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.3.1",
     "dotenv": "^8.2.0",
     "dropzone": "^5.9.2",
+    "express": "^4.17.1",
     "firebase": "^8.3.2",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
@@ -34,6 +35,7 @@
     "react-dropzone": "^11.3.2",
     "react-firebase-hooks": "^3.0.4",
     "react-icons": "^4.2.0",
+    "react-instagram-embed": "^2.0.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
