--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@fullcalendar/daygrid": "^5.6.0",
     "@fullcalendar/interaction": "^5.6.0",
+    "@fullcalendar/list": "^5.6.0",
     "@fullcalendar/react": "^5.6.0",
+    "@fullcalendar/timegrid": "^5.6.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -16,6 +18,9 @@
     "dropzone": "^5.9.2",
     "express": "^4.17.1",
     "firebase": "^8.3.2",
+    "firebase-admin": "^9.7.0",
+    "firebase-functions": "^3.13.2",
+    "firebase-tools": "^9.10.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
