--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase-admin": "^9.7.0",
     "firebase-functions": "^3.13.2",
     "firebase-tools": "^9.10.0",
+    "framer-motion": "^4.1.17",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "react": "^17.0.2",
@@ -37,6 +38,7 @@
     "react-chartjs-2": "^3.0.3",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-dotenv": "^0.1.3",
     "react-dropzone": "^11.3.2",
     "react-firebase-hooks": "^3.0.4",
     "react-icons": "^4.2.0",
@@ -47,6 +49,7 @@
     "react-share": "^4.4.0",
     "react-to-pdf": "^0.0.13",
     "react-to-print": "^2.12.4",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -71,6 +74,11 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "react-dontenv": {
+    "whitelist": [
+      "API_URL"
     ]
   }
 }
