--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^9.0.0",
     "dropzone": "^5.9.2",
     "express": "^4.17.1",
+    "fcm-node": "^1.6.1",
     "firebase": "^8.3.2",
     "firebase-admin": "^9.7.0",
     "firebase-functions": "^3.13.2",
