--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,6 @@
 {
   "short_name": "Client Portal",
   "name": "Rey Diaz Law",
-  "gcm-sender-id": "127282603496",
   "icons": [
     {
       "src": "favicon.ico",
@@ -21,6 +20,8 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  
+  "theme_color": "#343a50",
+  "background_color": "#f5f5f5",
+  "gcm-sender-id": "127282603496"
 }
