--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
     "chart.js": "^3.2.0",
     "classnames": "^2.3.1",
@@ -21,10 +22,11 @@
     "firebase": "^8.3.2",
     "firebase-admin": "^9.7.0",
     "firebase-functions": "^3.13.2",
-    "firebase-tools": "^9.10.0",
+    "firebase-tools": "^9.12.0",
     "framer-motion": "^4.1.17",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
+    "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-avatar": "^3.10.0",
     "react-bootstrap": "^1.5.2",
@@ -43,6 +45,7 @@
     "react-dropzone": "^11.3.2",
     "react-firebase-hooks": "^3.0.4",
     "react-icons": "^4.2.0",
+    "react-ig-feed": "^1.0.4",
     "react-instagram-embed": "^2.0.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
